--- a/hdp/public/dashboard/dashInicio.html
+++ b/hdp/public/dashboard/dashInicio.html
@@ -67,7 +67,7 @@
                 <div class="card">
                     <div class="cardInt">
                         <div style="display: flex; flex-direction: row; height: 18vh; align-items: center;">
-                            <h1 id="qtdFora" style="color:#B62727;"></h1><h1 style="color:#B62727;">/</h1><h1 id="qtdTotal" style="color:#B62727;"></h1>
+                            <h1 id="qtdFora" style="color:#B62727;"></h1><h1 style="color:#B62727;">/</h1><h1 style="color:#B62727;">6</h1>
                         </div>
                         <h4 style="font-size: 120%;">Salas com registros</h4>
                         <h5>Fora do ideal</h5>
@@ -116,31 +116,7 @@
     span_nomeUsuario.innerHTML = sessionStorage.NOME_USUARIO
     span_emailUsuario.innerHTML = sessionStorage.EMAIL_USUARIO
 
-    contarSalasTotais(sessionStorage.FK_EMPRESA)
     qtdSalasFora(sessionStorage.FK_EMPRESA)
-
-    function contarSalasTotais(fkEmpresa) {
-        fetch(`/registro/contarSalasTotais/${fkEmpresa}`, {
-            method: "GET",
-            headers: {
-                "Content-Type": "application/json"
-            }
-        }).then(function (resposta) {
-            console.log("ESTOU NO THEN DO contarSalasTotais()!")
-
-            if (resposta.ok) {
-                console.log("Função Contar Usuarios(): ")
-
-                resposta.json().then(function (resposta) {
-                    var dados = resposta[0];
-
-                    console.log(dados);
-                    qtdTotal.innerHTML = dados.salas;
-
-                })
-            }
-        })
-    }
 
     function qtdSalasFora(fkEmpresa) {
         fetch(`/registro/qtdSalasFora/${fkEmpresa}`, {
