--- a/hdp/public/dashboard/tela-info1.html
+++ b/hdp/public/dashboard/tela-info1.html
@@ -56,8 +56,8 @@
 
                     <div class="blocoInterno">
                         <div class="cardInt2">
-                        <h3><span id="qtdFora"></span><span>/</span><span>6</span></h3>
-                            <h4>Salas com registros fora do Ideal</h4>
+                        <h3 style="margin-bottom:0.5% ;"><span id="qtdFora"></span><span>/</span><span>6</span></h3>
+                            <h4 style="margin-top: 0%;">Salas com registros fora do Ideal</h4>
                         </div>
                     </div>
                 </div>
