--- a/hdp/public/index.html
+++ b/hdp/public/index.html
@@ -173,7 +173,7 @@
 
     <h4>Contato: HistoricalDocument@gmail.com </h4>
     <h4><a style="color: white;"
-        href="https://bandteccom-my.sharepoint.com/:u:/g/personal/gabriel_bellintani_sptech_school/ESmZJEM1hM1LkfyMHMlbBGYBcC9JoWDg3tv1jKw2yCWe9w?e=EE1Zlq"
+        href="assets/imgs/Manual de Instalação.pdf"
         download="Manual-de-instalação-HDP">Manual de Instalação da Aplicação</a></h4>
     <h4>SPTech &copy; 2024</h4>
     <span class="version">v1.0.0</span>
