últimas mudanças de css da dashboard

--- a/hdp/public/dashboard/HDP-IA.html
+++ b/hdp/public/dashboard/HDP-IA.html
@@ -44,14 +44,15 @@
                     <p><span id="span_emailUsuario"></span></p>
                 </div>
                 <div class="acesso">
-                    <a href="../index.html" style="color: #ffffff;">
-                        <h3>HOME</h3>
-                    </a>
+                    
                     <a href="dashInicio.html" style="color: #ffffff;">
                         <h3>DASHBOARD</h3>
                     </a>                    
                     <a href="../dashboard/HDP-IA.html">
                         <h3 style="color: #DD940D;">AJUDA</h3>
+                    </a>
+                    <a href="../index.html" style="color: #ffffff;">
+                        <h3>SAIR</h3>
                     </a>
 
                 </div>
